--- a/system/nixos/tmux/tmux.conf
+++ b/system/nixos/tmux/tmux.conf
@@ -4,9 +4,9 @@ set -ga terminal-features ",xterm-256color:RGB"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 #set-option -g default-shell fish
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+#unbind C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
 set-option -g focus-events on
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
