--- a/system/tmux/tmux.conf
+++ b/system/tmux/tmux.conf
@@ -47,7 +47,7 @@ set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
 set -g window-style 'fg=default,bg=default' #331d1d2e'
-set -g window-active-style 'fg=default,bg=#191724'
+#set -g window-active-style 'fg=default,bg=#191724'
 
 
 bind r source-file /etc/tmux.conf
@@ -72,5 +72,4 @@ bind c new-window -c "#{pane_current_path}"
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/src/notes/todo.md"
 
-#bind -r f run-shell "tmux neww tmux-sessionizer"
 bind -r f display-popup -E "tmux-sessionizer"
