--- a/system/tmux/tmux.conf
+++ b/system/tmux/tmux.conf
@@ -3,7 +3,7 @@ set-option -g set-titles-string "tmux: #S / #(tmux-window-icons #W)"
 set -ga terminal-features ",xterm-256color:RGB"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
-#set-option -g default-shell fish
+set-option -g default-shell /run/current-system/sw/bin/fish
 #unbind C-b
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
@@ -24,7 +24,7 @@ set -g status-justify left
 set -g status-left-length 200    # increase length (from 10)
 set -g status-right-length 200    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
-# set -g status-style 'bg=#1e1e2e'
+#set -g status-style 'bg=#1e1e2e'
 set -g status-style 'bg=#191724'
 
 
@@ -47,7 +47,7 @@ set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
 set -g window-style 'fg=default,bg=default' #331d1d2e'
-#set -g window-active-style 'fg=default,bg=#191724'
+set -g window-active-style 'fg=default,bg=#191724'
 
 
 bind r source-file /etc/tmux.conf
