--- a/home/picom.conf
+++ b/home/picom.conf
@@ -1,4 +1,4 @@
-shadow = true;
+shadow = false;
 shadow-radius = 50;
 shadow-opacity = .35
 shadow-offset-x = -49;
@@ -8,11 +8,11 @@ shadow-color = "#00020b"
 frame-opacity = 0.95;
 frame-opacity-for-same-colors = true;
 
-corner-radius = 13
+corner-radius = 10
 
 blur-method = "dual_kawase"
-blur-background = true
-blur-background-frame = true
+blur-background = false
+blur-background-frame = false
 
 backend = "glx"
 dithered-present = false;
