--- a/home/macos/aerospace.toml
+++ b/home/macos/aerospace.toml
@@ -12,8 +12,7 @@ after-login-command = []
 # You can use it to add commands that run after AeroSpace startup.
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = [
-]
+after-startup-command = []
 # Start AeroSpace at login
 start-at-login = true
 
@@ -58,6 +57,11 @@ outer.left =       10
 outer.bottom =     10
 outer.top =       5
 outer.right =      10
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'App Store'
+check-further-callbacks = true
+run = 'layout floating'
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -117,6 +121,7 @@ alt-l = 'focus right'
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
+alt-shift-l = 'move right'
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
